# my-rust-cli

./: Cargo.toml  cliPass.txt  pass.txt
src/: main.rs
